[package]
name = "another"
version = "0.1.0"
authors = ["David Houston <houstdav000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "^0.2"
tokio = { version = "^1", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
aws_lambda_events = "^0.4"

[dev-dependencies]
chrono = "^0.4"
